--- a/app/pages/Home/Home.scss
+++ b/app/pages/Home/Home.scss
@@ -3,6 +3,12 @@
   @media only screen and (min-width: sg-breakpoint(portrait, tablet)) {
     display: grid;
     grid-template-columns: 670px 1fr;
+    align-items: center;
+  }
+  &Image {
+    svg {
+      display: block;
+    }
   }
 }
 
